--- a/.env
+++ b/.env
@@ -1,3 +1,23 @@
+# Default Environment Variables
+# This file is used to set up the environment variables for the application.
+# Make sure to rename this file to .env before running the application.
+# You can copy this file to .env and modify the values as needed.
+# Example: cp .env.example .env
+# Make sure to set the correct permissions for the .env file
+
+# Application Configuration
+APP_MAINTENANCE=false
+APP_PRODUCTION=false
+APP_ENV=local
+APP_DEBUG=true
+APP_KEY=base64:your_app_key_here
+APP_URL=http://localhost
+APP_NAME=Inventario
+APP_LOCALE=pt-BR
+APP_TIMEZONE=America/Sao_Paulo
+APP_LOCALE_FALLBACK=pt-BR
+APP_MAINTENANCE_MESSAGE="O sistema está em manutenção. Por favor, tente novamente mais tarde."
+
 # Database Configuration
 DB_CONNECTION=mysql
 DB_HOST=localhost
@@ -9,5 +29,7 @@ DB_PASSWORD=master
 # Mail Server Configuration
 EMAIL_HOST=smtp.mailtrap.io
 EMAIL_PORT=465
-EMAIL_USERNAME=d1476ff5ae9c5e
-EMAIL_PASSWORD=bb0c50c93ea2dc
+EMAIL_USERNAME=015e18b58ed979
+EMAIL_PASSWORD=b4c858b1a3e324
+EMAIL_SEND_TO=rfergomes@gmail.com
+EMAIL_SEND_TO_NAME="Rodrigo Lima"
