--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,14 @@
             "app\\":"app"
         },
         "files":[
-            "app/helpers/json.php",
+            "app/helpers/auth.php",
             "app/helpers/csrf.php",
+            "app/helpers/env.php",
             "app/helpers/flash.php",
-            "app/helpers/redirect.php",
-            "app/helpers/env.php"
+            "app/helpers/helpers.php",
+            "app/helpers/json.php",
+            "app/helpers/old.php",
+            "app/helpers/redirect.php"        
         ]
     },
     "scripts":{
